# stable-diffusion-cli-on-modal

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  README_ja.md  entrypoint.py  pyproject.toml  requirements.txt  sd_cli.py  sdcli.py  setup.py  util.py
.github/: dependabot.yml
.github/workflows/: docker_image_ci.yml  lint_python.yml  pylint.yml  style_and_error_checker.yml
app/: Dockerfile  __main__.py  app.py  app_img.py  app_vid.py  config.sample.yml  pyproject.toml  requirements.txt  setup.py  stable_diffusion_1_5.py  stable_diffusion_xl.py
cmd/: domain.py  infrasctucture.py  infrastructure.py  sd15_img2img.py  sd15_txt2img.py  sdxl_txt2img.py  ti2v_handler.py  txt2img_handler.py  util.py
docs/: 2026-01-28-ti2v-prd.md  2026-01-29-app-split-plan.md
docs/plan/: 2026-07-11_dockerfile-hadolint.md  2026-07-11_python-3.14-upgrade.md  2026-07-11_sdxl-model-volume.md  2026-07-11_uv-lockfile-dependabot.md  2026-07-12_lint-ci-uv-ruff.md
sdcli/: sd15_txt2img.py  txt2img.py
setup_files/: Dockerfile  __main__.py  config.sample.yml  main.py  requirements.txt  setup.py  stable_diffusion_1_5.py  txt2img.py
