[project]
name = "stable-diffusion-modal-app"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
  "accelerate>=1.14.0",
  "controlnet-aux",
  "diffusers[torch]>=0.37.0",
  "ftfy",
  "imageio",
  "imageio-ffmpeg",
  "invisible-watermark",  # To help viewers identify the images as machine-generated.
  "peft",
  "pillow",
  "pillow-avif-plugin",  # To save images in AVIF format.
  "pyyaml",  # To read the configuration file by written YAML.
  "safetensors>=0.8.0",  # To store tensors safely.
  "torch>=2.12.0",
  "transformers>=5.12.1",
  "xformers>=0.0.35",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
xformers = { index = "pytorch-cu126" }
