[project]
name = "stable-diffusion-modal-app"
version = "0.1.0"
requires-python = "==3.14.*"
dependencies = [
  "accelerate>=1.14.0",
  "controlnet-aux",
  "diffusers[torch]>=0.39.0",
  "ftfy",
  "imageio",
  "imageio-ffmpeg",
  "invisible-watermark",  # To help viewers identify the images as machine-generated.
  "opencv-python-headless",  # Replaces the GUI build of opencv-python so the image needs no apt-installed libGL/libglib.
  "peft",
  "pillow",
  "pillow-avif-plugin",  # To save images in AVIF format.
  "pyyaml",  # To read the configuration file by written YAML.
  "safetensors>=0.8.0",  # To store tensors safely.
  "torch>=2.12.1",
  "torchvision",  # Direct dependency so tool.uv.sources pins it to the cu126 index.
  "transformers>=5.12.1",
]

[tool.uv]
package = false
override-dependencies = [
  # Exclude the GUI build of opencv pulled in by invisible-watermark; opencv-python-headless provides cv2 instead.
  "opencv-python; sys_platform == 'never'",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
